# OpenGL-Native-Render

./: settings.gradle
Engine/: build.gradle
Engine/src/androidTest/java/com/render/engine/: ExampleInstrumentedTest.java
Engine/src/main/: AndroidManifest.xml
Engine/src/main/assets/shader/: color_adj_fragment_shader.glsl  color_adj_vertex_shader.glsl  contrast_shader.glsl  default_fragment_shader.glsl  default_vertex_shader.glsl  exposure_fragment_shader.glsl  face_lift_fragment_shader.glsl  gaussian_fragment_shader.glsl  gaussian_vertex_shader.glsl  high_pass_fragment_shader.glsl  highlight_shadow_fragment_shader.glsl  mask_fragment_shader.glsl  model_fragment_shader.glsl  model_vertex_shader.glsl  oes_fragment_shader.glsl  oes_vertex_shader.glsl  saturation_fragment_shader.glsl  sharpen_fragment_shader.glsl  sharpen_vertex_shader.glsl  skin_buff_fragment_shader.glsl  skin_buff_vertex_shader.glsl  skin_fragment_shader.glsl  trans_vertex_shader.glsl
Engine/src/main/cpp/: CMakeLists.txt  engine-lib.cpp
Engine/src/main/cpp/impl/common/: EventMessage.cpp  EventQueue.cpp  JniUtil.cpp  LogUtil.cpp  MatrixUtil.cpp  Point.cpp  WorkQueue.cpp  WorkTask.cpp
Engine/src/main/cpp/impl/core/: BaseRender.cpp  BitmapUtil.cpp  CamRender.cpp  CameraRender.cpp  FaceDetector.cpp  FilterFactory.cpp  GlUtil.cpp  ImageRender.cpp  OffScreenRender.cpp  Render.cpp  RenderEglBase.cpp  ShareRender.cpp  WindowSurface.cpp
Engine/src/main/cpp/impl/face/: BaseFaceDetector.cpp  CamFaceDetector.cpp  CascadeDetectorAdapter.cpp  FaceDetector.cpp  ImageFaceDetector.cpp
Engine/src/main/cpp/impl/filter/: BackgroundFilter.cpp  BaseFilter.cpp  BaseFilterGroup.cpp  BeautifyFaceFilter.cpp  ColorAdjustFilter.cpp  ContrastFilter.cpp  DefaultFilter.cpp  DownloadPixelFilter.cpp  ExposureFilter.cpp  FaceLiftFilter.cpp  GaussianFilter.cpp  GaussianOnePassFilter.cpp  HighPassFilter.cpp  HighlightShadowFilter.cpp  MaskFilter.cpp  OesFilter.cpp  OesTexFilter.cpp  PlaceHolderFilter.cpp  SaturationFilter.cpp  ScreenFilter.cpp  SharpenFilter.cpp  SkinBuffFilter.cpp  SkinFilter.cpp
Engine/src/main/cpp/impl/model/: ModelFilter.cpp  ModelLoader.cpp  MtlLib.cpp  MtlObj.cpp  Obj3D.cpp  ObjGroup.cpp
Engine/src/main/cpp/include/common/: Common.h  CustomQueue.h  EventMessage.h  EventQueue.h  Image.h  JniUtil.h  Log.h  LogUtil.h  MatrixUtil.h  Point.h  ValidPtr.h  WorkQueue.h  WorkTask.h
Engine/src/main/cpp/include/core/: BaseRender.h  BitmapUtil.h  CamRender.h  CameraRender.h  FaceDetector.h  FilterFactory.h  GlUtil.h  ImageRender.h  OffScreenRender.h  Render.h  RenderEglBase.h  ShareRender.h  Static.h  WindowSurface.h
Engine/src/main/cpp/include/face/: BaseFaceDetector.h  CamFaceDetector.h  CascadeDetectorAdapter.h  FaceDetector.h  ImageFaceDetector.h
Engine/src/main/cpp/include/filter/: BackgroundFilter.h  BaseFilter.h  BaseFilterGroup.h  BeautifyFaceFilter.h  ColorAdjustFilter.h  ContrastFilter.h  DefaultFilter.h  DownloadPixelFilter.h  ExposureFilter.h  FaceLiftFilter.h  GaussianFilter.h  GaussianOnePassFilter.h  HighPassFilter.h  HighlightShadowFilter.h  MaskFilter.h  OesFilter.h  OesTexFilter.h  PlaceHolderFilter.h  SaturationFilter.h  ScreenFilter.h  SharpenFilter.h  SkinBuffFilter.h  SkinFilter.h
Engine/src/main/cpp/include/model/: ModelFilter.h  ModelLoader.h  MtlLib.h  MtlObj.h  Obj3D.h  ObjGroup.h
Engine/src/main/java/com/render/engine/camera/: CamRenderEngine.java  CameraHelper.java  RenderCamMetadata.java
Engine/src/main/java/com/render/engine/core/: BaseRenderEngine.java  CamRenderEngine.java  CameraRenderEngine.java  EngineEnv.java  IFace.java  IRenderEngine.java  IRenderListener.java  OffScreenRender.java  RenderAdapter.java  RenderEngine.java  RenderListener.java
Engine/src/main/java/com/render/engine/core/filter/: BaseRenderEngine.java  ContrastFilter.java  ExposureFilter.java  FilterConst.java  GaussianFilter.java  HighlightShadowFilter.java  SaturationFilter.java  SharpenFilter.java
Engine/src/main/java/com/render/engine/face/: LandMark.java
Engine/src/main/java/com/render/engine/filter/: BaseFilter.java  ColorAdjustFilter.java  ContrastFilter.java  ExposureFilter.java  FilterConst.java  GaussianFilter.java  HighlightShadowFilter.java  SaturationFilter.java  SharpenFilter.java
Engine/src/main/java/com/render/engine/img/: ImageRenderEngine.java
Engine/src/main/java/com/render/engine/share/: ShareRenderEngine.java
Engine/src/main/java/com/render/engine/util/: BitmapUtil.java  ComponentUtil.java  EngineAssetsManager.java  EngineThreadPool.java  LogUtil.java  MediaInfo.java
Engine/src/test/java/com/render/engine/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/render/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/render/demo/: MainActivity.java
app/src/main/java/com/render/demo/ui/: BaseActivity.java  CameraActivity.java  FaceRenderView.java  MultiSurfaceActivity.java  OffScreenRenderActivity.java  StillImageActivity.java
app/src/main/res/drawable/: bg_adjust_panel.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_multi_surface.xml  activity_off_screen_render.xml  activity_still_image.xml  layout_adjust_beauty.xml  layout_adjust_beauty_test.xml  layout_adjust_blur.xml  layout_adjust_brightness.xml  layout_adjust_face.xml  layout_bottom_tab.xml  layout_camera_adjust.xml  layout_camera_control.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/test/java/com/render/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
